# fastcreateapi-lib

./: .gitignore  README.md  pyproject.toml
examples/: main.py
fastcreateapi_library/: __init__.py  application.py
fastcreateapi_library/constants/: __init__.py  types.py
fastcreateapi_library/core/: __init__.py  resource.py
fastcreateapi_library/core/interfaces/: __init__.py  architeture.py  config.py
fastcreateapi_library/core/repositories/: __init__.py
fastcreateapi_library/core/services/: __init__.py  architecture_hex.py  architecture_msc.py  resource.py
fastcreateapi_library/src/: application.py  main.py
fastcreateapi_library/src/constants/: path_constant.py
fastcreateapi_library/src/core/: __init__.py  resource.py
fastcreateapi_library/src/core/interfaces/: __init__.py  architeture.py
fastcreateapi_library/src/core/services/: architecture_hex.py  architecture_msc.py
fastcreateapi_library/src/utils/: directories_utils.py
fastcreateapi_library/utils/: directories_utils.py
