[tool.poetry]
name = "fastcreateapi-library"
version = "0.1.0"
description = ""
authors = ["Flavio Oria <flavio.oriap@gmail.com>"]
readme = "README.md"
packages = [{include = "fastcreateapi_library"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
cookiecutter = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
